--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
       <div class="flex-alg-center">
         <!--TODO: nuk klikohet notifikimi me button bashk me rregullu -->
         <div class="shopping-cart-container">
-          <div class="notification-counter">
-            <span>5</span>
-          </div>
           <a href="/pages/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
         </div>
         <button><span class="material-symbols-outlined user-panel footer-icon btn-pad open-modal-btn" data-target="#modal9">login</span></button>
@@ -121,7 +118,7 @@
         <div class="product-card">
           <div class="open-modal-btn" data-target="#modal1">
             <div class="prod-img-box">
-              <img class="productImage" src="/images/1.png" alt="Proudct Image">
+              <img class="productImage" src="/images/4.png" alt="Proudct Image">
               <div class="discount-label">-14%</div>
               <div class="dropdown productEditDp">
                 <button class="dropdown-button admin-panel productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
@@ -129,6 +126,9 @@
                   <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
                   <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
                 </div>
+              </div>
+              <div class="product-store-container">
+                <img src="public/images/spar kosova.jpg" alt="">
               </div>
             </div>
             <div class="product-info">
@@ -199,13 +199,16 @@
     <span class="material-symbols-outlined">close</span>
   </div>
   <div class="modal-content-user product-form-container">
-    <img class="productImg" src="/images/3.png" alt="">
+
+    <img class="productImg" src="/images/3.png" alt="Product Image">
     <div class="product-form-group">
       <h3>Greek Yogurt 10%</h3>
 
       <div class="space-btw">
-        <p>Marketi:</p>
-        <p>Viva Fresh Store</p>
+        <p class="d-flex flex-center">Viva Fresh Store</p>
+        <div class="originContainer storeContainer">
+          <img src="/images/viva fresh.jpg" alt="Store Image">
+        </div>
       </div>
 
       <div class="space-btw">
