--- a/pages/cart.html
+++ b/pages/cart.html
@@ -46,7 +46,10 @@
         <tr>
           <!-- Product Image Box -->
           <td class="prodBox">
-            <img src="/images/6.png" alt="Product Image">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
           </td>
           <td class="infBox">
             <p class="infTitle">Senf Remi 400gr</p>
@@ -62,45 +65,26 @@
                 <button class="quantity-btn highCon">&#x2b;</button>
               </div>
             </div>
+            <div class="cartCheckbx">
+              <label for="check1">U krye</label>
+              <input type="checkbox" id="check1" name="check1">
+            </div>
           </td>
         </tr>
-        <!-- End of Product Box  -->
-  
-              <!-- Product Box  -->
-              <tr>
-                <!-- Product Image Box -->
-                <td class="prodBox">
-                  <img src="/images/5.png" alt="Product Image">
-                </td>
-                <td class="infBox">
-                  <p class="infTitle">Akadia Djath 700gram</p>
-                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                    <div class="infPrice">
-                      <span>1.85</span>
-                      <span>€</span>
-                    </div>
-                    <!-- Quantity Incress and Decress Container-->
-                    <div style="display: flex;align-items: center;">
-                      <button class="quantity-btn lowCon">&#8722;</button>
-                      <input type="number" class="quantity-input" value="1">
-                      <button class="quantity-btn highCon">&#x2b;</button>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Product Box  -->
-  
-                    <!-- Product Box  -->
+
         <tr>
           <!-- Product Image Box -->
           <td class="prodBox">
-            <img src="/images/2.jpg" alt="Product Image">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/1.png" alt="Product Image">
           </td>
           <td class="infBox">
-            <p class="infTitle">Fruta te fresketa 1kg</p>
+            <p class="infTitle">Senf Remi 400gr</p>
             <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
               <div class="infPrice">
-                <span>6.13</span>
+                <span>3.61</span>
                 <span>€</span>
               </div>
               <!-- Quantity Incress and Decress Container-->
@@ -110,45 +94,26 @@
                 <button class="quantity-btn highCon">&#x2b;</button>
               </div>
             </div>
+            <div class="cartCheckbx">
+              <label for="check1">U krye</label>
+              <input type="checkbox" id="check1" name="check1">
+            </div>
           </td>
         </tr>
-        <!-- End of Product Box  -->
-  
-              <!-- Product Box  -->
-              <tr>
-                <!-- Product Image Box -->
-                <td class="prodBox">
-                  <img src="/images/4.png" alt="Product Image">
-                </td>
-                <td class="infBox">
-                  <p class="infTitle">Vrishlle Perutina 400gram</p>
-                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                    <div class="infPrice">
-                      <span>2.50</span>
-                      <span>€</span>
-                    </div>
-                    <!-- Quantity Incress and Decress Container-->
-                    <div style="display: flex;align-items: center;">
-                      <button class="quantity-btn lowCon">&#8722;</button>
-                      <input type="number" class="quantity-input" value="1">
-                      <button class="quantity-btn highCon">&#x2b;</button>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Product Box  -->
-  
-          <!-- Product Box  -->
+
         <tr>
           <!-- Product Image Box -->
           <td class="prodBox">
-            <img src="/images/3.png" alt="Product Image">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
           </td>
           <td class="infBox">
-            <p class="infTitle">Makarona Devoli 150gr</p>
+            <p class="infTitle">Senf Remi 400gr</p>
             <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
               <div class="infPrice">
-                <span>100</span>
+                <span>3.61</span>
                 <span>€</span>
               </div>
               <!-- Quantity Incress and Decress Container-->
@@ -158,61 +123,88 @@
                 <button class="quantity-btn highCon">&#x2b;</button>
               </div>
             </div>
+            <div class="cartCheckbx">
+              <label for="check1">U krye</label>
+              <input type="checkbox" id="check1" name="check1">
+            </div>
           </td>
         </tr>
-        <!-- End of Product Box  -->
-  
-              <!-- Product Box  -->
-              <tr>
-                <!-- Product Image Box -->
-                <td class="prodBox">
-                  <img src="/images/2.png" alt="Product Image">
-                </td>
-                <td class="infBox">
-                  <p class="infTitle">Leng Vishnje Frutti 1L  </p>
-                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                    <div class="infPrice">
-                      <span>100</span>
-                      <span>€</span>
-                    </div>
-                    <!-- Quantity Incress and Decress Container-->
-                    <div style="display: flex;align-items: center;">
-                      <button class="quantity-btn lowCon">&#8722;</button>
-                      <input type="number" class="quantity-input" value="1">
-                      <button class="quantity-btn highCon">&#x2b;</button>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Product Box  -->
-  
-              <!-- Product Box  -->
-              <tr>
-                <!-- Product Image Box -->
-                <td class="prodBox">
-                  <img src="/images/1.png" alt="Product Image">
-                </td>
-                <td class="infBox">
-                  <p class="infTitle">Green Yogurt 200gr</p>
-                  <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                    <div class="infPrice">
-                      <span>100</span>
-                      <span>€</span>
-                    </div>
-                    <!-- Quantity Incress and Decress Container-->
-                    <div style="display: flex;align-items: center;">
-                      <button class="quantity-btn lowCon">&#8722;</button>
-                      <input type="number" class="quantity-input" value="1">
-                      <button class="quantity-btn highCon">&#x2b;</button>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Product Box  -->
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <label for="check1">U krye</label>
+              <input type="checkbox" id="check1" name="check1">
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <label for="check1">U krye</label>
+              <input type="checkbox" id="check1" name="check1">
+            </div>
+          </td>
+        </tr>
+
+        
+
+        
   
       </tbody>
 
     </table>
+
+    <div class="textcartContainer">
+      <div class="textcartArea">
+        <div class="d-flex flex-column">
+          <label for="extraNotes">Shënime Shtesë:</label>
+          <p>Ato produkte që nuk janë në zbritje dëshironi t`i shtoni në listë, shkruani në këtë hapësirë për shembull:</p>
+        </div>
+        <textarea id="extraNotes" name="ExtraNotes" placeholder="Bukë,Domate,Mish,etj."></textarea>
+      </div>
+    </div>
 
     <!-- Total Information and Share Button Section -->
 
@@ -221,10 +213,6 @@
         <div class="tprBox">
   
           <div class="tprDiv">
-            <p>Subtotal:</p>
-            <b>20.00 €</b>
-          </div>
-          <div class="tprDiv">
             <span>Produktet:</span>
             <b>25x</b>
           </div>
@@ -232,9 +220,13 @@
             <h3>Totali:</h3>
             <h4>2.00 €</h4>
           </div>
+          <div class="tprDiv" style="color: var(--color-button);">
+            <h3>Ju Kursyet:</h3>
+            <h4>55.00 €</h4>
+          </div>
         </div>
         <div class="tprBox cartBtnCont">
-          <button>Share List</button>
+          <button>Dergo Listen</button>
         </div>
       </div>
     </di>
@@ -280,7 +272,7 @@
 
 
 
-
+  <script type="module" src="/src/uicomponents.js"></script>
   <script type="module" src="/src/main.js"></script>
   
 </body>
