--- a/pages/cart.html
+++ b/pages/cart.html
@@ -206,7 +206,7 @@
       </div>
     </div>
 
-    <!-- Total Information and Share Button Section -->
+    <!-- Total Information and Share Button Eection -->
 
     <div style="padding-bottom: 34px;">
       <div class="tprCotainer">
