--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <button><span class="material-symbols-outlined user-panel footer-icon btn-pad open-modal-btn" data-target="#modal9">login</span></button>
         <button class="footer-icon btn-pad" onclick="toggleDropdown()"><span class="material-symbols-outlined admin-panel">account_circle</span></button>
         <div class="header-dropdown-btn">
-            <a href="#">Settings</a>
-            <a href="#">Logout</a>
+          <button class="open-modal-btn" data-target="#modal14">Settings</button>
+          <button class="open-modal-btn" data-target="#modal11">Logout</button>
         </div>
       </div>
 
