--- a/index.html
+++ b/index.html
@@ -622,6 +622,18 @@
           <label>Linku Zbritjes</label>
           <input class="input-style" type="link" id="product-name" name="product-name" required>
         </div>
+      </form>
+    </div>
+
+
+    <div class="input-g-container">
+
+      <div class="ProductBtnBox">
+        <button class="d-flex flex-align-center col-gap-5"><span class="material-symbols-outlined">add</span>Add Product</button>
+      </div>
+
+
+      <form class="FormCls">
         <div class="d-flex flex-row flex-between col-gap-10">
           <div class="input-base-style d-flex flex-column w-100">
             <label>Emri Produktit</label>
@@ -653,8 +665,20 @@
               <option value="vlora">England</option>
           </select>
         </div>
+        <div class="ProductBtnBox d-flex flex-end">
+          <button>Delete</button>
+        </div>
       </form>
+
+      
+
+
+
     </div>
+
+
+
+
   </div>
   <div class="modal-buttons">
     <button>No</button>
