--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -15,7 +15,7 @@
 
   <header class="cartHeader">
     <a href="/index.html"><span class="material-symbols-outlined btn-pad">arrow_back</span></a>
-    <h3>Lista Produkteve</h3>
+    <h3>Favorites</h3>
     <span class="material-symbols-outlined btn-pad">delete</span>
   </header>
   
@@ -49,8 +49,9 @@
               </div>
             </div>
             <div class="cartCheckbx">
-              <label for="check1">U krye</label>
-              <input type="checkbox" id="check1" name="check1">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
             </div>
           </td>
         </tr>
