--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad open-modal-btn" data-target="#modal7">add</span></button>
       <div class="flex-alg-center">
-        <a href="pages/notifications.html"><span class="material-symbols-outlined admin-panel footer-icon btn-pad">notifications</span></a>
+        <a href="pages/notifications.html"><span class="material-symbols-outlined admin-panel footer-icon btn-pad">favorite</span></a>
         <!--TODO: nuk klikohet notifikimi me button bashk me rregullu -->
         <div class="shopping-cart-container">
           <a href="/pages/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
@@ -53,10 +53,8 @@
           <button class="open-modal-btn" data-target="#modal11">Logout</button>
         </div>
       </div>
-
     </header>
     
-
     <!-- End of Header  -->
 
     <!-- Main Section  -->
